# tracked_robot_tools

./: CMakeLists.txt  package.xml  setup.py
include/tracked_robot_tools/: flipper_postures.h  kinematics.h  skid_steer_odometry.h
python/: CMakeLists.txt  kinematics.i
src/: flipper_postures.cpp  kinematics.cpp  skid_steer_odometry.cpp
src/tracked_robot_tools/: __init__.py  flipper_postures.py
test/: test_skid_steer_odometry.cpp
