<?xml version="1.0"?>
<package format="2">
  <name>tracked_robot_tools</name>
  <version>1.0.0</version>
  <description>Tools for tracked robots</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  
  <build_depend>python</build_depend>
  <build_depend>swig</build_depend>
  
  <exec_depend>rospy</exec_depend>
</package>
